# openai-rust-client

./: .gitignore  Cargo.toml
examples/: list_engines.rs  moderations.rs  say_test.rs
src/: content_filter.rs  lib.rs
src/endpoints/: create_completion.rs  list_engines.rs  mod.rs  moderation.rs
