[package]
name = "openai-rust-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri_braid = "0.1.10"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features=["derive"]}

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }